repeat education for better scraping

--- a/src/lavond-joseph-resume.tex
+++ b/src/lavond-joseph-resume.tex
@@ -131,10 +131,12 @@
 %-----------EDUCATION-----------
 \section{Education}
   \resumeSubHeadingListStart
-    \resumeMultiSubheading
-      {University of North Carolina}{Chapel Hill, NC}
-      {Doctorate of Philosophy in Statistics and Operations Research}{Aug. 2020 -- May 2025}{Master of Science in Statistics and Data Science}{May 2024}
-    \resumeSubheading{California Polytechnic State University}{San Luis Obispo}{Bachelor of Science in Statistics}{Sep. 2016 -- Mar. 2020}
+    \resumeSubheading{University of North Carolina}{Chapel Hill, NC}%
+      {Ph.D. Statistics and Operations Research}{Aug. 2020 -- May 2025}
+    \resumeSubheading{University of North Carolina}{Chapel Hill, NC}%
+      {M.S. Statistics and Data Science}{Aug. 2020 -- May 2024}
+    \resumeSubheading{California Polytechnic State University}{San Luis Obispo}%
+      {B.S. Statistics}{Sep. 2016 -- Mar. 2020}
   \resumeSubHeadingListEnd
 
 
