--- a/src/lavond-joseph-resume.tex
+++ b/src/lavond-joseph-resume.tex
@@ -131,9 +131,8 @@
 %-----------EDUCATION-----------
 \section{Education}
   \resumeSubHeadingListStart
-    \resumeSubheading{University of North Carolina}{Chapel Hill, NC}%
-      {Ph.D. Statistics and Operations Research}{Aug. 2020 -- May 2025}
-    \resumeSubheading{University of North Carolina}{Chapel Hill, NC}%
+    \resumeMultiSubheading{University of North Carolina}{Chapel Hill, NC}%
+      {Ph.D. Statistics and Operations Research}{Aug. 2020 -- May 2025}%
       {M.S. Statistics and Data Science}{Aug. 2020 -- May 2024}
     \resumeSubheading{California Polytechnic State University}{San Luis Obispo}%
       {B.S. Statistics}{Sep. 2016 -- Mar. 2020}
