need to update publications

--- a/src/lavond-joseph-resume.tex
+++ b/src/lavond-joseph-resume.tex
@@ -194,7 +194,7 @@
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
      \textbf{FedDecay: Adapting to Data Heterogeneity in Federated Learning With Gradient Decay}{, Joseph Lavond, Minhao Cheng, Yao Li, Under Review} \\
-     \textbf{Trusted Aggregation (TAG): Backdoor defense in Federated Learning}{, Joseph Lavond, Minhao Cheng, Yao Li, In NeurIPS Workshop on Federated Learning: Recent Advances and New Challenges, 2022} 
+     \textbf{Trusted Aggregation (TAG): Backdoor defense in Federated Learning}{, Joseph Lavond, Minhao Cheng, Yao Li, TMLR, 2022}
     }}
  \end{itemize}
 
