Updates from Overleaf

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,3 +1,22 @@
+@phdthesis{dissertation,
+author={Lavond, Joseph},
+title={Advancing Model Security, Data Privacy, and Performance for Widespread
+Adoption of Trustworthy Artificial Intelligence},
+school={University of North Carolina at Chapel Hill},
+year={2025},
+note={Accepted}
+}
+
+% ============================================================
+% Publications
+@article{decay, 
+title={FedDecay: Balancing Model Performance and Rapid Personalization in Federated Learning with Learning Rate Scheduling},
+author={Joseph Lavond and Minhao Cheng and Yao Li},
+year={2025},
+url={https://openreview.net/forum?id=r9eNUDe2im},
+note={Under Review}
+}
+
 @article{tag, 
 title={Trusted Aggregation ({TAG}): Backdoor Defense in Federated Learning},
 author={Joseph Lavond and Minhao Cheng and Yao Li},
@@ -7,3 +26,43 @@ year={2024},
 url={https://openreview.net/forum?id=r9eNUDe2im},
 note={}
 }
+
+@article{feeding,
+title={Mother–infant interactions and infant intake during breastfeeding versus bottle‐feeding expressed breast milk},
+volume={17},
+DOI={10.1111/mcn.13185},
+number={4},
+journal={Maternal & Child Nutrition},
+author={Ventura, Alison and Hupp, Megan and Lavond, Joseph},
+year={2021},
+month={May}
+}
+
+% ============================================================
+% Presentations
+@misc{defense,
+author={Lavond, Joseph},
+title={Defense Against Data Poisoning in Adversarial Machine Learning}, 
+school={University of North Carolina at Chapel Hill},
+year={2025},
+note={Talk}
+}
+
+@misc{
+privacy-lecture,
+title={Randomized Response and Differential Privacy for Data Privacy}, 
+author={Joseph Lavond}, 
+year={2024},
+note={Guest Lecture}, 
+}
+
+@inproceedings{
+tag-poster,
+title={Trusted Aggregation ({TAG}): Model Filtering Backdoor Defense In Federated Learning},
+author={Joseph Lavond and Minhao Cheng and Yao Li},
+booktitle={Workshop on Federated Learning: Recent Advances and New Challenges (in Conjunction with NeurIPS 2022)},
+year={2022},
+url={https://openreview.net/forum?id=3tUku0Nf9gw}, 
+note={Poster}, 
+}
+
