--- a/src/lavond-joseph-cv.tex
+++ b/src/lavond-joseph-cv.tex
@@ -144,7 +144,7 @@
 
 
 %-----------EXPERIENCE-----------
-\section{Industry}
+\section{Experience}
   \resumeSubHeadingListStart
 
     \resumeSubheading
@@ -160,8 +160,8 @@
       {Ph.D. Intern}{June 2023 -- Aug. 2023}
       {Cisco}{San Jose, CA}
       \resumeItemListStart
-        \resumeItem{Developed a more efficient way to train generative models with differential privacy at scale, enabling statistical guarantees for the protection of private training data}
         \resumeItem{Evaluated changes to prevent the occurrence of mode collapse in Generative Adversarial Networks, where samples are not diverse and did not learn to cover the training distribution}
+        \resumeItem{Developed a more efficient way to train generative models with differential privacy at scale, enabling statistical guarantees for the protection of private training data}
     \resumeItemListEnd
 
     \resumeSubheading
@@ -169,105 +169,18 @@
       {Elevance Health, Inc. (Formerly Anthem)}{Indianapolis, IN}
       \resumeItemListStart
         \resumeItem{Implemented custom PyTorch semi-supervised Bayesian anomaly detection approach on Amazon Web Service (AWS) to identify exaggerated claims by providers for services offered}
-        \resumeItem{Created modeling data set pipeline for 60M row database using PySpark SQL in Jupyter on Kubeflow}
         \resumeItem{Received award for end-of-summer presentation to senior management}
-        \resumeItem{Participated in Agile Scrum model development process using Jira for a Fortune-30 company}
+        \resumeItem{Created modeling data set pipeline for 60M row database using PySpark SQL in Jupyter on Kubeflow}
       \resumeItemListEnd
 
       \resumeSubheading
         {Actuarial Services Intern}{Apr. 2020 -- Aug. 2020}
         {Blue Cross Blue Shield}{Phoenix, AZ}
         \resumeItemListStart
-            \resumeItem{Took over the job responsibilities of an Actuary who left the team early into the internship, which included providing the organization with the projected membership for all lines of business}
+            \resumeItem{Spearheaded the company-wide projection of membership for all lines of business}
             \resumeItem{Learned VBA to automate monthly updates to company forecasts within Microsoft Excel as well as data collection using process flows in SAS and SQL queries in Microsoft Access}
         \resumeItemListEnd
 
-  \resumeSubHeadingListEnd
-
-  
-\section{Academic}
-  \resumeSubHeadingListStart
-    \resumeSubheading
-        {Graduate Teaching Fellow}{Spring 2022 \& Fall 2024}
-        {University of North Carolina}{Chapel Hill, NC}
-        \resumeItemListStart
-            \resumeItem{
-                Trusted with teaching multiple semesters of an introduction to statistics and data science to over 100 undergraduates
-            }
-            \resumeItem{
-                Created a research project to learn skills related to storytelling with data for students to develop the ability to ingest and communicate answers from data
-            }
-            \resumeItem{
-                Created a research project on famous statistical biases for students to learn and present problematic ways of thinking, historical examples, and how to correctly reason from such problems
-            }
-            % \resumeItem{
-            %     Created over 40 lectures from the OpenIntro Statistics textbook to instill an understanding and appreciation for data, models, and inference
-            % }
-        \resumeItemListEnd
-
-    \clearpage
-    \resumeSubheading
-        {NSF-Funded Research Training Group}{Aug 2022 -- May 2025}
-        {University of North Carolina}{Chapel Hill, NC}
-        \resumeItemListStart
-            \resumeItem{Funding through a \$2M grant to add research to theory and application of networks}
-            \resumeItem{Actively participate in seminars and intensive courses to learn from leaders in network research}
-        \resumeItemListEnd
-        
-    \resumeSubheading
-        {Graduate Teaching Assistant}{Aug 2020 -- May 2021}
-        {University of North Carolina}{Chapel Hill, NC}
-        \resumeItemListStart
-            \resumeItem{
-                Lab instructor for teaching the foundations of statistics and data science in python covering data manipulation, visualization, simulation, and modeling
-            }
-            \resumeItem{
-                Teaching assistant for introduction to optimization covering linear, integer, non-linear, and dynamic programming, classical optimization problems, and network theory
-            }
-        \resumeItemListEnd
-        
-  \resumeSubHeadingListEnd
-
-
-\section{Projects}
-  \resumeSubHeadingListStart
-    \resumeSubheading
-        {Statistical Consultant}{Aug 2022 -- Dec 2023}
-        {University of North Carolina}{Chapel Hill, NC}
-        \resumeItemListStart
-            \resumeItem{
-                Used R to analyze longitudinal behavioral data, uncovering early behavioral markers across autism risk groups to support early diagnosis and intervention strategies
-            }
-            \resumeItem{
-                Used R to model medical contract turnaround times, identifying key drivers of delays and delivering predictive insights to inform process improvements
-            }
-        \resumeItemListEnd
-        
-    \resumeSubheading
-        {Fatal Force}{Aug 2020 - May 2021}
-        {University of North Carolina}{Chapel Hill, NC}
-        \resumeItemListStart
-            \resumeItem{
-                Engineered features from diverse datasets, including FBI crime reports and Census demographic data, standardizing variables and creating regional dummy variables to account for geographic heterogeneity
-            }                
-            \resumeItem{
-                Developed and evaluated models using R to predict police shooting fatalities, improving test RMSE by 3 percent, and identifying key predictors like officer employment and population demographics across regions            
-            }
-            \resumeItem{
-                Validated model robustness by comparing results across multiple statistical frameworks (Poisson link and variance-stabilizing transformations), confirming consistent directionality and magnitude of key coefficients
-            }
-            
-        \resumeItemListEnd
-        
-        
-    \resumeSubheading
-        {Statistical Consultant}{Sep 2019 -- Jul 2020}
-        {California Polytechnic State University}{San Luis Obispo, CA}
-        \resumeItemListStart
-            \resumeItem{Provided SAS mixed modeling analyses and coauthored NIH funded infant feeding study on early life factors and childhood obesity as part of \$2 million grant}
-            \resumeItem{Provided statistical support regarding generalized linear models for the theses of several graduate students}
-        \resumeItemListEnd
-        
     \resumeSubheading
         {Frost Summer Research Program}{May 2019 -- Sep. 2019}
         {California Polytechnic State University}{San Luis Obispo, CA}
@@ -283,33 +196,19 @@
 %-----------PUBLICATIONS-----------
 \section{Publications}
     \resumeItemListStart
-        \resumeSubItem{\bibentry{dissertation}}
-        \resumeSubItem{\bibentry{decay}}
+        % \resumeItem{Joseph Lavond, Yuexin Cheng, Chudi Zhong, and Yao Li. Partition-Based Backdoor Detection and Purification from Poisoned Data. In progress.}
+        \resumeSubItem{Joseph Lavond, Minhao Cheng, and Yao Li. FedDecay: Adapting to Data Heterogeneity in Federated Learning with Gradient Decay. Under review.}
         \resumeSubItem{\bibentry{tag}}
-        % \resumeSubItem{\bibentry{feeding}}
     \resumeItemListEnd
     
-% \section{Presentations}
-%     \resumeItemListStart
-%         \resumeSubItem{\bibentry{defense}}
-%         \resumeSubItem{\bibentry{privacy-lecture}}
-%         \resumeSubItem{\bibentry{tag-poster}}
-%     \resumeItemListEnd
-    
+
 %-----------PROGRAMMING SKILLS-----------
 \section{Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
-    \small{
-        \resumeSubItem{
-            \textbf{Technical}{: Languages \textit{(Python, R, SQL, SAS)}, Machine Learning \textit{(PyTorch, scikit-learn, Tensorflow, Keras, caret)}, Analysis \textit{(Pandas, NumPy, SciPy, Tidyverse)}, Visualization \textit{(Matplotlib, Seaborn, ggplot2)}, Other \textit{(Git, Linux)}}
-        }
-        \resumeSubItem{
-            \textbf{Soft}{: Communication \textit{(data storytelling, technical documentation)}, Adaptability \textit{(agile methodologies, quick learner, flexible in dynamic environments)}, Time Management \textit{(prioritization, multi-tasking)}, Teamwork \textit{(collaborative projects, cross-functional teams, leadership skills)}}
-        }
-        \resumeSubItem{
-            \textbf{Coursework}{: Deep Learning, High-Dimensional Time Series, Statistical Consulting, Optimization in Machine Learning and Data Science, Non-Parametric Statistics}        
-        }
-    }
+    \small{\item{
+     \textbf{Technical}{: Languages \textit{(Python, R, SQL, SAS)}, Machine Learning \textit{(PyTorch, scikit-learn, Tensorflow, Keras, caret)}, Analysis \textit{(Pandas, NumPy, SciPy, Tidyverse)}, Visualization \textit{(Matplotlib, Seaborn, ggplot2)}, Other \textit{(Git, Linux)}} \\
+     \textbf{Soft}{: Communication \textit{(data storytelling, technical documentation)}, Adaptability \textit{(agile methodologies, quick learner, flexible in dynamic environments)}, Time Management \textit{(prioritization, multi-tasking)}, Teamwork \textit{(collaborative projects, cross-functional teams, leadership skills)}}  \\
+    }}
  \end{itemize}
 
 % 
